--- a/FrontEnd/css/comp_perfil_prof.css
+++ b/FrontEnd/css/comp_perfil_prof.css
@@ -12,13 +12,18 @@ section.header_y_container {
         width: 50%;
 
         @media (max-width: 1100px) {
-            grid-template-columns: repeat(3, 30%);
+            grid-template-columns: repeat(3, 55%);
         }
 
         @media (max-width: 900px) {
-            grid-template-columns: repeat(1, 60%);
+            grid-template-columns: repeat(1, 80%);
             grid-template-rows: repeat(5, auto);
             gap: 0px;
+        }
+        
+        @media (max-width: 800px) {
+            grid-template-columns: repeat(1, 100%);
+            margin: 0;
         }
 
         .perfil_columna_izq,
