--- a/FrontEnd/css/login.css
+++ b/FrontEnd/css/login.css
@@ -6,72 +6,96 @@ body {
     height: 100vh;
     position: relative;
 
-    .volver span{
+    .volver span {
         position: absolute;
         font-weight: 800;
         color: white;
-        &:hover{
+
+        &:hover {
             color: var(--azul_marino);
             cursor: pointer;
         }
-        &:active{
+
+        &:active {
             transform: scale(115%);
         }
     }
-}
 
-.login_card {
-    max-width: 280px;
-    width: 300px;
-    height: 325px;
-    display: grid;
-    grid-template-rows: 3;
-    gap: 15px;
-    background-color: var(--azul_principal);
-    border-radius: 10px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
-    padding: 30px;
+    .login_card {
+        max-width: 280px;
+        width: 300px;
+        height: 325px;
+        display: grid;
+        grid-template-rows: 3;
+        gap: 15px;
+        background-color: var(--azul_principal);
+        border-radius: 10px;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
+        padding: 30px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
+        .avatar {
+            width: 90px;
+            height: 90px;
+            border-radius: 50%;
+            margin: 5px auto 20px;
+            overflow: hidden;
+            border: 4px double var(--azul_clarisimo);
 
-
-    .avatar {
-        width: 90px;
-        height: 90px;
-        border-radius: 50%;
-        margin: 5px auto 20px;
-        overflow: hidden;
-        border: 4px double var(--azul_clarisimo);
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
-    }
-
-    input {
-        width: 100%;
-        height: 35px;
-        padding: 10px;
-        box-sizing: border-box;
-        border: 1px solid #ccc;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.364);
-        border-radius: 8px;
 
         input {
             width: 100%;
-            height: 400px;
+            height: 35px;
             padding: 10px;
             box-sizing: border-box;
-            margin-bottom: 10px;
             border: 1px solid #ccc;
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.364);
             border-radius: 8px;
         }
+
+        .eye_container {
+            display: flex;
+            position: relative;
+            .eye {
+                position: inherit;
+                width: 20px;
+                height: 20px;
+                display: block;
+                margin-right: 2px;
+                margin-top: -42px;
+                /* background-color: violet; */
+                border-radius: 50%;
+                border: 0.75px solid black;
+                box-shadow: 0 5px 45px rgba(0,0,0,0.2),
+                            /* inset 0 0 15px var(--azul_principal), */
+                            inset 0 0 5px var(--azul_principal);
+                left: 80%;
+
+                &::before {
+                    content:'';
+                    position: absolute;
+                    top: 50%;
+                    left: 70%;
+                    transform: translate(-50%, -50%);
+                    width: 10px;
+                    height: 10px;
+                    border-radius: 50%;
+                    background-color: #000;
+                    border: 2px solid #0990bd;
+                    box-sizing: border-box;
+                }
+            }
+        }
+
     }
 
     .login_button {
@@ -81,9 +105,10 @@ body {
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.364);
         cursor: pointer;
 
-        a{
-            color: var(--blanco)
+        a {
+            color: var(--blanco);
         }
+
         &:hover {
             filter: brightness(70%);
         }
