--- a/FrontEnd/css/login.css
+++ b/FrontEnd/css/login.css
@@ -65,6 +65,7 @@ body {
         .eye_container {
             display: flex;
             position: relative;
+
             .eye {
                 position: inherit;
                 width: 20px;
@@ -72,28 +73,27 @@ body {
                 display: block;
                 margin-right: 2px;
                 margin-top: -42px;
-                /* background-color: violet; */
                 border-radius: 50%;
                 border: 0.75px solid black;
-                box-shadow: 0 5px 45px rgba(0,0,0,0.2),
-                            /* inset 0 0 15px var(--azul_principal), */
-                            inset 0 0 5px var(--azul_principal);
+                box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
+                    inset 0 0 15px #f2f3f3;
                 left: 80%;
-
-                &::before {
-                    content:'';
-                    position: absolute;
-                    top: 50%;
-                    left: 70%;
-                    transform: translate(-50%, -50%);
-                    width: 10px;
-                    height: 10px;
-                    border-radius: 50%;
-                    background-color: #000;
-                    border: 2px solid #0990bd;
-                    box-sizing: border-box;
-                }
             }
+        }
+
+        .eye_container.open .eye::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 70%;
+            transform: translate(-50%, -50%);
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: #000;
+            border: 2px solid #0990bd;
+            box-sizing: border-box;
+            transition: height 0.3s ease;
         }
 
     }
