--- a/FrontEnd/objetos/vista_profesional_listar_ordenes/profesionalAceptarOrden.css
+++ b/FrontEnd/objetos/vista_profesional_listar_ordenes/profesionalAceptarOrden.css
@@ -1,28 +1,28 @@
 .aceptarOrden {
-  z-index: 10;
   max-width: 300px;
   width: 300px;
   height: 350px;
-  display: grid;
-  grid-template-rows: 3;
+  display: flex;
+  flex-direction: column;
   gap: 15px;
-  background-color: var(--azul_claro);
-  border-radius: 8px;
-  box-shadow: 0px 5px 10px 10px rgba(0, 0, 0, 0.8);
+  background-color: var(--azul_principal);
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px var(--negro);
   padding: 30px;
   position: absolute;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
+  z-index: 10;
 
   textarea {
-    max-width: 100%;
+    max-width: 100vw;
     max-height: fit-content;
     text-align: center;
     opacity: 80%;
     margin-bottom: 15px;
     padding: 3px;
-    box-shadow: 0px 2px 2px rgba(251, 245, 245, 0.364);
+    box-shadow: 0px 2px 2px var(--shadow-color);
     border-radius: 8px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1em;
@@ -31,26 +31,25 @@
   input {
     display: inline;
     text-align: center;
-    border-radius: 8px;
-    width: 80%;
+    border-radius: 15px;
+    width: 50%;
     margin: 0 auto;
     margin-bottom: 1em;
-    background-color: var(--azul_clarisimo);
+    opacity: 50%;
   }
 
   button {
     display: inline;
-    color: aliceblue;
+    color: var(--azul_clarisimo);
     background-color: inherit;
     border-radius: 8px;
     max-width: 100%;
     max-height: fit-content;
-    box-shadow: 0px 1px 1px 1px rgba(248, 247, 247, 0.631);
-    background-color: var(--azul_oscuro);
+    box-shadow: 0px 1px 1px 1px var(--negro);
     border: none;
 
     &:hover {
-      background-color: rgba(0, 0, 255, 0.5);
+      background-color: var(--azul_marino);
     }
 
     &:active {
