--- a/FrontEnd/css/login.css
+++ b/FrontEnd/css/login.css
@@ -104,6 +104,7 @@ body {
         border-radius: 8px;
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.364);
         cursor: pointer;
+        margin-top: -10px;
 
         a {
             color: var(--blanco);
