--- a/FrontEnd/css/registro_card.css
+++ b/FrontEnd/css/registro_card.css
@@ -20,8 +20,6 @@ body {
     }
 }
 
-
-
 .registro_card {
     min-width: 350px;
     width: 300px;
@@ -33,7 +31,6 @@ body {
     border-radius: 10px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
     padding: 30px;
-
     position: absolute;
     top: 50%;
     left: 50%;
@@ -64,20 +61,44 @@ body {
         border: 1px solid #ccc;
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.364);
         border-radius: 8px;
-
-        input {
-            width: 100%;
-            height: 400px;
-            padding: 10px;
-            box-sizing: border-box;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
+    }
+    .eye_container {
+        display: flex;
+        position: relative;
+    
+        .eye {
+            position: inherit;
+            width: 20px;
+            height: 20px;
+            display: block;
+            margin-right: 2px;
+            margin-top: -42px;
+            border-radius: 50%;
+            border: 0.75px solid black;
+            box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
+                inset 0 0 15px #f2f3f3;
+            left: 82%;
         }
+    }
+    
+    .eye_container.open .eye::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 70%;
+        transform: translate(-50%, -50%);
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #000;
+        border: 2px solid #0990bd;
+        box-sizing: border-box;
+        transition: height 0.3s ease;
     }
     h5{
         text-align: center;
         margin-bottom: 5px;
+        margin-top: -10px;
         font-size: .8em;;
 
     }
