--- a/FrontEnd/css/actualiza_perfil_prof.css
+++ b/FrontEnd/css/actualiza_perfil_prof.css
@@ -2,6 +2,7 @@
 @import url("aside.css");
 @import url("header_y_container.css");
 @import url("loader.css");
+@import url("styleCartel.css");
 
 section.header_y_container {
     form.perfil_form {
