--- a/FrontEnd/css/inicio.css
+++ b/FrontEnd/css/inicio.css
@@ -1,6 +1,8 @@
 @import url("style.css");
 
 body {
+    width: 100vw;
+    max-width: 1500px;
     height: auto;
     background: linear-gradient(to bottom, var(--azul_principal), #99b6f7a7);
 }
@@ -9,7 +11,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 25px;
+    padding: 15px 30px;
 
     @media (max-width: 700px) {
         padding: 10px 15px;
@@ -49,6 +51,7 @@ header {
     .menu {
         display: flex;
         margin-top: 36px;
+        justify-content: space-between;
 
         @media (max-width: 700px) {
             flex-direction: column;
@@ -125,7 +128,7 @@ header {
         padding: 20px;
         border: 4px outset var(--azul_clarisimo);
         border-radius: 10px;
-        width: 80%;
+        width: 80vw;
         max-width: 430px;
         overflow: auto;
         line-height: 1.75em;
@@ -173,29 +176,40 @@ header {
 }
 
 main {
+    width: 100%;
+    max-width: 1500px;
     height: auto;
-    padding: 0 20px;
+    padding: 0 25px;
+
 
     .inicio {
-        padding: 20px;
+        width: 100%;
+        max-width: 1500px;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        gap: 5px;
+        align-items: center;
+        margin-top: 36px; 
 
-        @media (max-width: 1000px) {
+        @media (max-width: 1150px) {
             display: grid;
+            grid-template-columns: 1fr;
             grid-template-rows: auto auto;
             grid-template-areas:
                 "img"
                 "txt";
-            gap: 20px;
+            margin-top: -30px; 
+
         }
 
         .txt {
-            @media (max-width: 1000px) {
+            padding: 0 15px;
+
+            @media (max-width: 1150px) {
                 grid-area: txt;
                 text-align: center;
-                padding: 0 15px;
+                padding:0 40px;
+                width: 100%;
             }
 
             @media (max-width: 800px) {
@@ -222,53 +236,43 @@ main {
             }
 
             p {
-                line-height: 1.5em;
-
-                @media (max-width: 1150px) {
-                    width: 55vw;
-                }
+                line-height: 1.7em;
 
                 @media (max-width: 1000px) {
-                    width: 100vw;
+                    width: 100%;
                 }
             }
-
-            .img {
-                @media (max-width: 1150px) {
-                    width: 120%;
-                    padding-bottom: 50px;
-                }
-
-                @media (max-width: 1000px) {
-                    grid-area: img;
-                    margin-top: -50px;
-                    margin-bottom: -50px;
-
-                    img {
-                        width: 90vw;
-                    }
-                }
-
-                @media (max-width: 650px) {
-                    margin-top: -20px;
-                }
+        }
+        .imagen {
+            width: 100%;
+            max-width: 1500px;
+            @media (max-width: 1150px) {
+                grid-area: img;
             }
+
+            @media (max-width: 650px) {
+                margin-top: 20px;
+            }
+            img {
+                width: 100%;
+            }
+            
         }
     }
 
     .proceso {
+        width: 100%;
         color: black;
         margin-bottom: 50px;
 
         @media (max-width: 650px) {
-            width: 100vw;
+            width: 100%;
         }
 
         h1 {
             text-align: center;
             font-size: 1.8rem;
-            margin: 2em 0;
-
+            margin: 2.2em 0 1.5em;
         }
 
         .pasos {
@@ -305,6 +309,8 @@ main {
 }
 
 footer {
+    width: 100%;
+    max-width: 1500px;
     padding: 20px 0 0;
     align-items: flex-start;
     text-align: center;
@@ -462,8 +468,17 @@ footer {
     .franja_NoCountry p {
         text-align: center;
         background-color: #436ff3;
+        height: 35px; 
         min-height: 25px;
         color: white;
         margin-top: 40px;
+        place-content: center;
+        line-height: 30px;
+
+        img{
+            filter: invert(100%);
+            position: relative;
+            top: 7px;
+        }
     }
 }
