--- a/FrontEnd/css/crear_orden.css
+++ b/FrontEnd/css/crear_orden.css
@@ -2,3 +2,4 @@
 @import url("aside.css");
 @import url("header_y_container.css");
 @import url("loader.css");
+@import url("../objetos/vista_crear_orden/CrearOrden.css");
