--- a/FrontEnd/css/sitio_Prof.css
+++ b/FrontEnd/css/sitio_Prof.css
@@ -27,24 +27,18 @@ section.header_y_container {
             @media (max-width: 800px) {
                 grid-template-columns: repeat(2, 1fr);
                 width: 70%;
+                max-width: (100vw - 25%);
             }
 
             @media (max-width: 700px) {
                 padding: 10px;
                 margin: 0;
                 width: 90%;
-                max-width: (100vw - 25%);
             }
 
             @media (max-width: 649px) {
-                max-width: (100vw - 30%);
+                max-width: (100vw - 40%);
                 height: 70vh;
-            }
-
-            @media (max-width: 900px) {
-                form.perfil_form {
-                    width: calc(100vw - 8%);
-                }
             }
 
             div {
@@ -55,7 +49,9 @@ section.header_y_container {
                 color: var(--blanco);
                 display: grid;
                 place-content: center;
-
+                min-width: 32%;
+                /* min-height: 18%; */
+                
                 &:hover {
                     cursor: pointer;
                     filter: brightness(60%);
@@ -66,13 +62,12 @@ section.header_y_container {
                 }
 
                 a {
-                    min-width: 32vw;
-                    min-height: 18vh;
                     color: var(--blanco);
                     font-size: 1em;
                     display: grid;
                     place-items: center;
                     text-align: center;
+                    padding: 20px;
                 }
 
                 @media(max-width: 900px) {
@@ -82,7 +77,8 @@ section.header_y_container {
 
                 @media(max-width: 650px) {
                     padding: 5px;
-                }
+                    font-size: 0.7em;
+                } 
 
                 &:hover {
                     color: var(--azul_marino);
@@ -107,4 +103,5 @@ section.header_y_container {
             }
         }
     }
+    
 }
