--- a/FrontEnd/css/lista_ordenes.css
+++ b/FrontEnd/css/lista_ordenes.css
@@ -1,3 +1,6 @@
 @import url("style.css");
 @import url("aside.css");
 @import url("header_y_container.css");
+@import url("styleCartel.css");
+@import url("profesionalListarOrden.css");
+@import url("profesionalAceptarOrden.css");
