--- a/FrontEnd/css/profesionalListarOrden.css
+++ b/FrontEnd/css/profesionalListarOrden.css
@@ -13,6 +13,7 @@
   align-items: center;
   justify-content: baseline;
   margin: 0 0.1em;
+  color: aliceblue;
 
   .CrearOrden {
     box-shadow: -2px 2px 3px 2px rgba(253, 251, 251, 0.477);
