--- a/FrontEnd/css/styleCartel.css
+++ b/FrontEnd/css/styleCartel.css
@@ -19,7 +19,7 @@
     transform: translateY(50%);
 
     div {
-        font-size: 1.2em;
+        font-size: 20px;
         font-weight: 700;
     }
 
