--- a/FrontEnd/css/actualiza_perfil_cliente.css
+++ b/FrontEnd/css/actualiza_perfil_cliente.css
@@ -11,6 +11,11 @@ section.header_y_container {
         justify-content: center;
         width: min(80%, 600px);
 
+        @media (max-width: 650px) {
+            grid-template-columns: repeat(1, 100%);
+            gap: 0;
+        }
+
         .perfil_columna_izq,
         .perfil_columna_der {
             width: 100%;
@@ -46,6 +51,11 @@ section.header_y_container {
             cursor: pointer;
             font-size: 1em;
             font-weight: bolder;
+
+            @media (max-width: 650px) {
+                width: 100%;
+                margin-top: 10px;
+            }
 
             a {
                 display: block;
