--- a/FrontEnd/objetos/vista_crear_orden/CrearOrden.css
+++ b/FrontEnd/objetos/vista_crear_orden/CrearOrden.css
@@ -2,7 +2,7 @@
 
 #CrearOrden {
   max-width: 300px;
-  width: 300px;
+  min-width: 280px;
   height: 350px;
   display: grid;
   grid-template-rows: 3;
@@ -32,7 +32,7 @@
   button {
     background-color: var(--azul_oscuro);
     padding: 0px;
-    border-radius: 8px;
+    border-radius:15px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.364);
     cursor: pointer;
     color: var(--blanco);
@@ -51,7 +51,6 @@
       right: 0;
       top: 0;
       margin: .5em;
-      background-color: transparent;
       border: none;
       border-radius: 0;
       font-weight: 800;
