--- a/FrontEnd/css/login.css
+++ b/FrontEnd/css/login.css
@@ -22,7 +22,7 @@ body {
     }
 
     .login_card {
-        max-width: 280px;
+        min-width: 290px;
         height: 325px;
         display: grid;
         grid-template-rows: 3;
