--- a/FrontEnd/css/profesionalAceptarOrden.css
+++ b/FrontEnd/css/profesionalAceptarOrden.css
@@ -43,7 +43,7 @@
     max-height: fit-content;
     box-shadow: 0px 1px 1px 1px var(--negro);
     border: none;
-
+padding: 0.5em 0;
     &:hover {
       background-color: var(--azul_marino);
     }
