--- a/FrontEnd/css/lista_ordenes.css
+++ b/FrontEnd/css/lista_ordenes.css
@@ -4,3 +4,4 @@
 @import url("styleCartel.css");
 @import url("profesionalListarOrden.css");
 @import url("profesionalAceptarOrden.css");
+/*@import url("../objetos/Ratings/rating.css");*/
