agregando el pago

--- a/FrontEnd/css/lista_ordenes.css
+++ b/FrontEnd/css/lista_ordenes.css
@@ -4,4 +4,4 @@
 @import url("styleCartel.css");
 @import url("profesionalListarOrden.css");
 @import url("profesionalAceptarOrden.css");
-/*@import url("../objetos/Ratings/rating.css");*/
+@import url("../objetos/vista_Plataforma_pago/plataforma-pago.css");
