calificando al profesonal al terminar la orden

--- a/FrontEnd/css/lista_ordenes.css
+++ b/FrontEnd/css/lista_ordenes.css
@@ -5,3 +5,4 @@
 @import url("profesionalListarOrden.css");
 @import url("profesionalAceptarOrden.css");
 @import url("../objetos/vista_Plataforma_pago/plataforma-pago.css");
+@import url("../objetos/vista_profesional_ordene_aprobada_por_el_cliente/style_cartelPuntuar.css");
